--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,7 @@
        <a href="https://pixabay.com/images/search/photographer/" class="btn btn-outline-light alert-link  px-5 py-3 text-bold ">By now $5.99</a>
      </div>
      <div class="col-md-5 col-sm-12 shadow-lg">
-      <img src="../src/css/asssets/pexels-jeandaniel-francoeur-2799785.jpg" alt="Books">
+      <img src="../src/asssets/pexels-jeandaniel-francoeur-2799785.jpg" alt="Books">
     </div>
      <div class="col-md-5 col-sm-12 shadow-lg spinner-grow alert-warning bg-dark align-self-lg-baseline bg-body p-lg-5">
      </div>
@@ -91,7 +91,7 @@
       <div class="col-md-6">
        
   <div class="pray">
-    <img src="../src/css/asssets/IMG_20220514_181050.jpg" alt="pray">
+    <img src="../src/asssets/IMG_20220514_181050.jpg" alt="pray">
   </div>
       </div>
       <div class="col-md-6">
@@ -232,7 +232,7 @@
     <div class="col-md-4 col-12 text-center ">
 <div class="card mr-2 d-inline-block shadow-lg p-sm-5">
   <div class="card-img-top">
-    <img src="../src/css/asssets/Mehedi 2_129000978800082_7350476866542632960_n.jpg" alt="Mambers" class="img-fluid border-radius p-4">
+    <img src="../src/asssets/Mehedi 2_129000978800082_7350476866542632960_n.jpg" alt="Mambers" class="img-fluid border-radius p-4">
   </div>
   <div class="card-body">
     <h3 class="card-title">Mehedi hasan</h3>
@@ -252,7 +252,7 @@
            <!-- card-2  -->
            <div class="card mr-2 d-inline-block shadow-lg p-sm-5">
             <div class="card-img-top">
-              <img src="../src/css/asssets/282235338_707822070534777_4263683927001069511_n.jpg" alt="Mambers" class="img-fluid rounded-circle w-50 p-4">
+              <img src="../src/asssets/282235338_707822070534777_4263683927001069511_n.jpg" alt="Mambers" class="img-fluid rounded-circle w-50 p-4">
             </div>
             <div class="card-body">
               <h3 class="card-title">Ahamed Arif</h3>
@@ -267,7 +267,7 @@
           <div class="carousel-item active text-center">
             <div class="card mr-2 d-inline-block shadow-lg p-sm-5">
               <div class="card-img-top">
-                <img src="../src/css/asssets/IMG_20220514_181050.jpg" alt="Mambers" class="img-fluid rounded-circle w-50 p-4">              
+                <img src="../src/asssets/IMG_20220514_181050.jpg" alt="Mambers" class="img-fluid rounded-circle w-50 p-4">              
               </div>
               <div class="card-body">
                 <h3 class="card-title">Mehedi Hasan</h3>
@@ -285,7 +285,7 @@
     <div class="col-md-4 col-12 text-center">
       <div class="card mr-2 d-inline-block shadow-lg p-sm-5">
         <div class="card-img-top">
-          <img src="../src/css/asssets/Liza_n.jpg" alt="Mambers" class="img-fluid border-radius p-4">
+          <img src="../src/asssets/Liza_n.jpg" alt="Mambers" class="img-fluid border-radius p-4">
         </div>
         <div class="card-body">
           <h3 class="card-title">Liza Akter</h3>
